--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".TransformersApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,7 +17,7 @@
             android:name=".ui.create_transformer.CreateRobotActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.faction.MainActivity2"
+            android:name=".ui.faction.FactionActivity"
             android:exported="false" />
         <activity
             android:name=".ui.register.RegisterActivity"
