--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Final_Application_2024"
         tools:targetApi="31">
-        <activity
+        <!--activity
             android:name=".ui.create_transformer.CreateRobotActivity"
             android:exported="false" />
         <activity
@@ -21,12 +21,12 @@
             android:exported="false" />
         <activity
             android:name=".ui.register.RegisterActivity"
+            android:exported="false" /-->
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
